Fixes for mobile devices

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       outline: none;
     }
   </style>
-  <script src="http://127.0.0.1:3000/seed"></script>
+  <script src="http://kirills-macbook-pro.local:3000/seed"></script>
   <script src="yui.config.js"></script>
   <script src="yui.app.js"></script>
 </head>
